test_suite/tests/ui/transparent/with_from.stderr
error: #[serde(transparent)] is not allowed with #[serde(from = "...")]
 --> $DIR/with_from.rs:5:1
  |
5 | / #[serde(transparent, from = "u64")]
6 | | struct S {
7 | |     a: u8,
8 | | }
  | |_^

error: aborting due to previous error

